--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
     "yup": "^1.7.1"
